// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BaseInput Base 1`] = `
<div
  className="sc-jrQzAO sc-hGPBjI ehlnOo bniVee"
>
  <div
    className="sc-bqiRlB fZtLhY"
  >
    <div
      className="sc-ksdxgE kkpAzG"
    >
      <input
        autoComplete="new-password"
        disabled={false}
        id={1}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Base"
        type="text"
        value=""
      />
      <fieldset
        className=""
      />
    </div>
    
  </div>
</div>
`;

exports[`Storyshots BaseInput Disabled 1`] = `
<div
  className="sc-jrQzAO sc-hGPBjI ehlnOo bniVee"
>
  <div
    className="sc-bqiRlB fZtLhY"
  >
    <div
      className="sc-ksdxgE kkpAzG disabled"
    >
      <input
        autoComplete="new-password"
        disabled={true}
        id={1}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Disabled"
        type="text"
        value=""
      />
      <fieldset
        className="disabled"
      />
    </div>
    
  </div>
</div>
`;

exports[`Storyshots BaseInput Password 1`] = `
<div
  className="sc-jrQzAO sc-hGPBjI ehlnOo bniVee"
>
  <div
    className="sc-bqiRlB fZtLhY"
  >
    <div
      className="sc-ksdxgE kkpAzG"
    >
      <input
        autoComplete="new-password"
        disabled={false}
        id={1}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Password"
        type="password"
        value=""
      />
      <fieldset
        className=""
      >
        <div
          className="sc-hBUSln sc-bkkeKt imodpN fnIseg"
          onClick={[Function]}
        >
          <svg
            id="/assets/icons/eye.svg"
          />
        </div>
      </fieldset>
    </div>
    <span
      className="sc-dJjYzT gauyiY"
    >
      Password must have at least 12 characters
    </span>
  </div>
</div>
`;

exports[`Storyshots BaseInput With Clear Button 1`] = `
<div
  className="sc-jrQzAO sc-hGPBjI ehlnOo bniVee"
>
  <div
    className="sc-bqiRlB fZtLhY"
  >
    <div
      className="sc-ksdxgE kkpAzG"
    >
      <input
        autoComplete="new-password"
        disabled={false}
        id={1}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="With Clear Button"
        type="text"
        value=""
      />
      <fieldset
        className=""
      >
        
      </fieldset>
    </div>
    
  </div>
</div>
`;

exports[`Storyshots BaseInput With Error Message 1`] = `
<div
  className="sc-jrQzAO sc-hGPBjI ehlnOo bniVee"
>
  <div
    className="sc-bqiRlB fZtLhY"
  >
    <div
      className="sc-ksdxgE kkpAzG error"
    >
      <input
        autoComplete="new-password"
        disabled={false}
        id={1}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="With Error Message"
        status="error"
        type="text"
        value=""
      />
      <fieldset
        className=""
      />
    </div>
    <span
      className="sc-dJjYzT dnnZGf"
    >
      Oh no, someone destroyed my snowman :(
    </span>
  </div>
</div>
`;

exports[`Storyshots BaseInput With Icon After 1`] = `
<div
  className="sc-jrQzAO sc-hGPBjI ehlnOo bniVee"
>
  <div
    className="sc-bqiRlB fZtLhY"
  >
    <div
      className="sc-ksdxgE kkpAzG"
    >
      <input
        autoComplete="new-password"
        disabled={false}
        id={1}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="With Icon After"
        type="text"
        value=""
      />
      <fieldset
        className=""
      >
        <div
          className="sc-hBUSln sc-fFeiMQ imodpN MddVR"
        >
          <svg
            id="/assets/icons/calendar.svg"
          />
        </div>
      </fieldset>
    </div>
    
  </div>
</div>
`;

exports[`Storyshots BaseInput With Icon Before 1`] = `
<div
  className="sc-jrQzAO sc-hGPBjI ehlnOo bniVee"
>
  <div
    className="sc-bqiRlB fZtLhY"
  >
    <div
      className="sc-ksdxgE jEmSLP"
    >
      <input
        autoComplete="new-password"
        disabled={false}
        id={1}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="With Icon Before"
        type="text"
        value=""
      />
      <fieldset
        className=""
      >
        <div
          className="sc-hBUSln sc-fotOHu imodpN"
        >
          <svg
            id="/assets/icons/search.svg"
          />
        </div>
      </fieldset>
    </div>
    
  </div>
</div>
`;

exports[`Storyshots BaseInput With Success Message 1`] = `
<div
  className="sc-jrQzAO sc-hGPBjI ehlnOo bniVee"
>
  <div
    className="sc-bqiRlB fZtLhY"
  >
    <div
      className="sc-ksdxgE kkpAzG success"
    >
      <input
        autoComplete="new-password"
        disabled={false}
        id={1}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="With Success Message"
        status="success"
        type="text"
        value=""
      />
      <fieldset
        className=""
      />
    </div>
    <span
      className="sc-dJjYzT izfPdB"
    >
      Success message!
    </span>
  </div>
</div>
`;
